<resources>

    <string name="hello_world">Hello world!</string>
    <string name="app_name">fly mobile</string>
    <string name="logo">Logo Fly!</string>
    <string name="deals_tab">Promociones</string>
    <string name="reviews_tab">Opiniones</string>
    <string name="notifications_tab">Notificaciones</string>
    <string name="unexpected_error">Ha ocurrido un error inesperado. Por favor vuela a intentarlo o re-instale la aplicación</string>

    <!-- Main activity -->

    <string name="flight_search">Promociones</string>
    <string name="review">Envia tu opinion</string>
    <string name="notifications">Notificaciones</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Fly Mobile</string>
    
    <!-- Action Bar -->
    
    <string name="review_menu">Opiniones</string>
    <string name="search_menu">Vuelos</string>
    <string name="notification_menu">Notificaciones</string>
    <string name="menu_search">Buscar</string>

    <!-- Search Flight activity -->

    <string name="title_activity_search_flight">Busca tu vuelo</string>
    <string name="edit_from">Ciudad de origen</string>
    <string name="search_deals">Buscar</string>
    <string name="deals_error">Ciudad invalida</string>

    <!-- Notification activity -->

    <string name="title_activity_notification">NotificationActivity</string>
    <string name="fav_airline_tag">Aerolínea</string>
    <string name="fav_number_tag">Número de vuelo</string>
    <string name="fav_button">Agregar a favoritos</string>
    <string name="flight_state">Cambio de estado de vuelo</string>
    <string name="departure_terminal">Cambio terminal de embarque</string>
    <string name="arrival_terminal">Cambio terminal de arribo</string>
    <string name="departure_gate">Cambio puerta de embarque</string>
    <string name="arrival_gate">Cambio puerta de arriba</string>
    <string name="baggage_gate">Cambio puerta de equipaje</string>
    <string name="departure_time">Cambio horario de partida</string>
    <string name="arrival_time">Cambio horario de arribo</string>
    <string name="which_notifications">Notificaciones</string>
    <string name="fav_success">Vuelo agregado correctamente</string>
    <string name="fav_error">Datos del vuelo incorrectos. Intente nuevamente</string>

    <!-- Review activity -->

    <string name="title_activity_review">Envia tu opinion</string>
    <string name="airline">Aerolinea</string>
    <string name="flight_num">Numero de vuelo</string>
    <string name="friendliness">Trato</string>
    <string name="food">Comida</string>
    <string name="punctuality">Puntualidad</string>
    <string name="mileage">Programa de millas</string>
    <string name="comfort">Comfort general</string>
    <string name="quality_price">Relación precio/calidad</string>
    <string name="recommend">¿Recomendaria esta aerolinea?</string>
    <string name="review_success">La opinion ha sido enviada</string>
    <string name="review_error">Datos del vuelo inválidos. Intente nuevamente</string>
    <string name="title_activity_main_fragment">MainFragment</string>

</resources>