<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <EditText
        android:id="@+id/airline"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/airline" />
    
    <EditText
        android:id="@+id/flight_num"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/flight_num" />
    
    <EditText
        android:id="@+id/satisfaction"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/satisfaction" />
    
    <Switch
        android:id="@+id/recommend"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/recommend" />
    
    <Button
        android:id="@+id/review"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:text="@string/review"
        android:onClick="callMethod" />
    
    <TextView 
        android:id="@+id/result"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"/>

</LinearLayout>