<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/fav_airline_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fav_airline_tag" />

    <EditText
        android:id="@+id/fav_airline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>
    
    <TextView
        android:id="@+id/fav_number_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fav_number_tag" />

    <EditText
        android:id="@+id/fav_flight_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/fav_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fav_button" 
        android:onClick="addFavouriteFlight"/>
      
</LinearLayout>
